--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 NODE_ENV='development'
 VITE_APP_AVATAR='https://api.dicebear.com/7.x/bottts-neutral/svg'
-VITE_APP_STATIC_URL='http://static.golang365.top/'
+VITE_APP_STATIC_URL='http://img.golang365.top/'
