--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "ant-design-vue": "^4.1.0",
     "axios": "^1.6.8",
+    "highlight.js": "^11.9.0",
+    "marked": "^12.0.1",
     "vue": "^3.4.21",
     "vue-router": "^4.0.13"
   },
